--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -16,13 +16,15 @@
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:ems="10"
-                android:id="@+id/signIn_et_email" android:layout_margin="8dp" android:hint="Email"/>
+                android:id="@+id/signIn_et_email" android:layout_margin="8dp" android:hint="Email"
+                android:text="pedro.pocas@mobiweb.pt"/>
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:ems="10"
-                android:id="@+id/signIn_et_password" android:layout_margin="8dp" android:hint="Password"/>
+                android:id="@+id/signIn_et_password" android:layout_margin="8dp" android:hint="Password"
+                android:text="1234qwer"/>
         <Button
                 android:text="sign in"
                 android:layout_width="match_parent"
