--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,46 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".home.HomeActivity">
+        android:fitsSystemWindows="true"
+        tools:context=".home.HomeActivity"
+        android:id="@+id/act_home_constraintLayout"
+        android:animateLayoutChanges="true">
+
     <FrameLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/act_home_bottomNavigationView"
+            android:id="@+id/act_home_fragContainer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/act_home_fragContainer">
-
+            app:layout_constraintBottom_toTopOf="@+id/act_home_bottomNavigationView">
     </FrameLayout>
+
     <android.support.design.widget.BottomNavigationView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/act_home_bottomNavigationView"
             app:menu="@menu/navigation"
             app:itemBackground="@color/navigationViewBackground"
             app:itemIconTint="@color/bnv_tab_item_foreground"
             app:itemTextColor="@color/bnv_tab_item_foreground"
-            app:layout_constraintHorizontal_bias="0.0"/>
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/act_home_bottomNavigationView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
-        <TextView
-                android:text="TextView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/textView"
-                android:gravity="center"/>
-    </LinearLayout>
+            app:layout_constraintBottom_toTopOf="@+id/include_connection_snackbar"/>
+
+    <include android:layout_width="0dp"
+             android:layout_height="wrap_content"
+             layout="@layout/include_internet_connection_snackbar"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintBottom_toBottomOf="parent"
+             android:id="@+id/include_connection_snackbar" android:visibility="gone"/>
+
+
 </android.support.constraint.ConstraintLayout>
