--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,32 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".main.MainActivity">
+        tools:context=".main.MainActivity"
+        android:animateLayoutChanges="true">
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:gravity="center">
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:id="@+id/linearLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/include_connection_snackbar">
         <Button
-                android:text="sign in"
+                android:text="@string/main_sign_in_button"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/main_btn_sign_in" android:layout_margin="8dp"/>
+                android:layout_height="wrap_content"
+                android:id="@+id/main_btn_sign_in"
+                android:layout_margin="8dp"/>
     </LinearLayout>
+
+    <include
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            layout="@layout/include_internet_connection_snackbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/include_connection_snackbar" android:visibility="gone"/>
 </android.support.constraint.ConstraintLayout>
