--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,29 +5,50 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".sign_in.SignInActivity">
+        tools:context=".sign_in.SignInActivity"
+        android:animateLayoutChanges="true">
 
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" android:gravity="center">
+            android:layout_height="0dp"
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/include_connection_snackbar">
+
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:ems="10"
-                android:id="@+id/signIn_et_email" android:layout_margin="8dp" android:hint="Email"
+                android:id="@+id/signIn_et_email"
+                android:layout_margin="8dp"
+                android:hint="Email"
                 android:text="pedro.pocas@mobiweb.pt"/>
+
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:ems="10"
-                android:id="@+id/signIn_et_password" android:layout_margin="8dp" android:hint="Password"
+                android:id="@+id/signIn_et_password"
+                android:layout_margin="8dp"
+                android:hint="Password"
                 android:text="1234qwer"/>
+
         <Button
-                android:text="sign in"
+                android:text="@string/act_sign_in_button_text"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/signIn_btn_signIn"/>
+                android:layout_height="wrap_content"
+                android:id="@+id/signIn_btn_signIn"/>
     </LinearLayout>
+    <include android:layout_width="0dp"
+             android:layout_height="wrap_content"
+             layout="@layout/include_internet_connection_snackbar"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintBottom_toBottomOf="parent"
+             android:id="@+id/include_connection_snackbar" android:visibility="gone"/>
 </android.support.constraint.ConstraintLayout>
